// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animal Service When a request to delete an animal is made The animal was deleted and the status is 204 1`] = `
Object {
  "config": Object {
    "adapter": [Function],
    "baseURL": "http://localhost:8080",
    "data": undefined,
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "delete",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "transitional": Object {
      "clarifyTimeoutError": false,
      "forcedJSONParsing": true,
      "silentJSONParsing": true,
    },
    "url": "animals/Manchas",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": "",
  "headers": Object {},
  "request": XMLHttpRequest {},
  "status": 204,
  "statusText": "No Content ",
}
`;

exports[`Animal Service When a request to get an especific animal is made The Sought animal was found and has the correct data 1`] = `
Object {
  "breed": "Bengali",
  "gender": "Female",
  "name": "Manchas",
  "vaccinated": true,
  "vaccines": Array [
    "Leptospirosis",
    "Parvovirus",
  ],
}
`;

exports[`Animal Service When a request to list all animals is made should return a list with animals 1`] = `
Array [
  Object {
    "breed": "Bengali",
    "gender": "Female",
    "name": "Manchas",
    "vaccinated": true,
  },
]
`;

exports[`Animal Service When a request to post an animal is made The animal was created and has the correct data 1`] = `
Object {
  "breed": "Bengali",
  "gender": "Female",
  "name": "Manchas",
  "vaccinated": true,
  "vaccines": Array [
    "Leptospirosis",
    "Parvovirus",
  ],
}
`;

exports[`Animal Service When a request to update an animal is made The animal was updated and has the correct data 1`] = `
Object {
  "breed": "Bengali",
  "gender": "Female",
  "name": "Manchas",
  "vaccinated": true,
  "vaccines": Array [
    "Leptospirosis",
    "Parvovirus",
  ],
}
`;
